--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tip Calculator App</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
+    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div class="upper-left">
                     <p>Bill</p>
                     <div class="bill-input">
-                        <img src="images/icon-dollar.svg" alt="">
+                        <img src="icon-dollar.svg" alt="">
                         <input type="number" placeholder="0" id="tip-input">
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                         <p class="text-alert">Can't be Zero</p>
                     </div>
                     <div class="people">
-                        <img src="images/icon-person.svg" alt="">
+                        <img src="icon-person.svg" alt="">
                         <input type="number" placeholder="0" id="totalPerson">
                     </div>
                 </div>
