--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="logo">
-        <img src="images/logo.svg" alt="Logo">
+        <img src="logo.svg" alt="Logo">
     </div>
         <div class="container">
             <div class="left-calc">
